...
		"notEnoughDiskSpace": "Not enough local disk space available.",
		"sharingNotAvailable": "Sharing is not available on this device."
	},
	"alertPrompt": {
		"defaults": {
			"title": "Title",
			"okText": "OK",
			"cancelText": "Cancel"
		},
		"exportMasterKeys": {
			"title": "Export master keys",
			"message": "You have not exported your master keys yet. It is highly recommended to export them now and store them in a safe place.",
			"okText": "Export",
			"cancelText": "Later"
		},
		"storageUsageOverLimit": {
			"title": "Storage usage over limit",
			"message": "You have exceeded your storage limit. Please free up some space or upgrade your plan to prevent unwanted data deletion.",
			"okText": "Upgrade",
			"cancelText": "Later"
...
			"cancelText": "Cancel"
		}
	},
	"drive": {
		"header": {
			"title": {
				"drive": "Drive",
				"selected": "{{count}} selected",
				"recents": "Recents",
				"favorites": "Favorites",
				"sharedIn": "Shared with you",
				"sharedOut": "Shared with others",
				"offline": "Available offline",
				"links": "Public links",
				"trash": "Trash"
			},
			"rightView": {
				"actionSheet": {
					"upload": {
						"files": "Upload files",
						"directory": "Upload directory",
						"media": "Upload media",
						"uploaded": "{{name}} uploaded"
					},
					"create": {
						"textFile": "Create text file",
						"directory": "Create directory",
						"photo": "Take photo",
						"created": "{{name}} created"
					},
					"cancel": "Cancel",
					"noMediaPermissions": "You need to grant media permissions to upload photos or videos.",
					"itemsUploaded": "{{count}} items uploaded",
...
				"confirm": "Restore",
				"cancel": "Cancel"
			}
		}
	},
	"home": {
		"title": "Home",
		"container": {
			"recents": {
				"title": "Recents"
			},
			"favorites": {
				"title": "Favorites"
...
					"confirmEmail": {
						"title": "Confirm new email address",
						"placeholder": "Confirm new email address"
					},
					"password": {
						"title": "Your password",
						"placeholder": "Password"
					}
				},
				"updateNickname": {
					"title": "Update nickname",
					"placeholder": "New nickname"
				},
...
		"index": {
			"hero": {
				"1": "End-to-end encrypted",
				"2": "Cloud Platform"
			},
			"signUp": "Sign up for free",
			"login": "Log in"
		},
		"login": {
			"title": "Log in",
			"header": {
				"cancel": "Cancel"
			},
...
		"unsavedChanges": "Unsaved changes"
	},
	"selectContacts": {
		"header": {
			"selectContacts": "Select contacts",
			"cancel": "Cancel",
			"done": "Done",
			"selectContact": "Select contact"
		},
		"toolbar": {
			"selected": "{{countOrName}} selected"
		},
		"list": {
...
			"title": "Playlists"
		}
	},
	"transfers": {
		"header": {
			"title": "Transfers",
			"back": "Back"
		},
		"info": "Transferring {{ongoingTransfers}} items at {{speed}}, {{remaining}} remaining",
		"noOngoingTransfers": "No ongoing transfers",
		"list": {
			"empty": "No transfers yet",
			"emptySearch": "No transfers found for this search",
...
	},
	"textEditor": {
		"header": {
			"back": "Back"
		},
		"unsavedChanges": "Unsaved changes",
		"savedSuccess": "Saved successfully",
		"saved": "Saved"
	},
	"contacts": {
		"menu": {
			"remove": "Remove",
			"block": "Block",
...
