...
		)
	}, [query.status, exportFile, value.length])

	const toolbarRightView = useMemo(() => {
		return (
			<ToolbarCTA
				testID="texteditor.save_button"
				disabled={item.type !== "cloud" || !didChange || query.status !== "success"}
				onPress={save}
				icon={{
					name: "check"
				}}
			/>
...
