appId: io.filen.app
env:
  DIRNAME: new_dir
---
- runFlow: ../login.yaml
- tapOn: Drive
- tapOn:
    id: drive.header.rightView.plus
- tapOn: Create directory
- inputText: ${DIRNAME}
- tapOn: OK
- assertVisible: ${DIRNAME} created
- runFlow:
    file: ../common/drive_item_delete.yaml
    env:
        FILENAME: ${DIRNAME}