appId: io.filen.app
env:
  FILENAME: new_text
  CONTENT: some new content here
---
- runFlow: ../login.yaml
- tapOn: Drive
- tapOn:                                  # Create new text file
    id: drive.plus_button
- tapOn: Create text file
- inputText: ${FILENAME}                  # Name text file
- tapOn: OK
- waitForAnimationToEnd
- tapOn:
    point: 50%,50%
- inputText: ${CONTENT}                   # Add content into text file
- runFlow:                                # Dismiss keyboard on iOS
    when:
      platform: iOS
    commands:
        - tapOn: Done
- hideKeyboard
- tapOn:
    id: texteditor.save_button
- assertVisible: Saved successfully
- waitForAnimationToEnd
- back                                    # Go back
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: Back
- tapOn: ${FILENAME}.txt.*                # Check that content was saved
- assertVisible: ${CONTENT}
- back
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: Back
- runFlow:
    file: delete_item.yaml
    env:
        FILENAME: ${FILENAME}.txt
