appId: io.filen.app
---
- scrollUntilVisible:
    element:
      text: .*${FILENAME}.*
- runFlow:
    when:
        platform: iOS
    commands:
        - longPressOn: ${FILENAME}.*
- runFlow:
    when:
        platform: Android
    commands:
        - tapOn:                        # Tap on "more/..." in the file/dir row
            rightOf: ${FILENAME}.*
- tapOn: Trash                   # Bin it
- tapOn: OK
- assertNotVisible: .*${FILENAME}.*  # Assert it was deleted
